@@ -205,6 +205,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7536. Remove unused CryptoCodec in org.apache.hadoop.fs.Hdfs.
     (Yi Liu via wheat9)
 
+    HDFS-7528. Consolidate symlink-related implementation into a single class.
+    (wheat9)
+
   OPTIMIZATIONS
 
     HDFS-7454. Reduce memory footprint for AclEntries in NameNode.
